# teleimager-raspi

./: .gitignore  AGENTS.md  README.md  README_zh-CN.md  cam_config_raspi.yaml  pyproject.toml  setup_raspi.sh  test_save_image.py
src/teleimager/: image_client.py  image_server.py
