[project]
name = "teleimager"
version = "1.5.0"
description = "TeleImager: multi-camera image streaming service for unitree teleoperation"
authors = [
    { name = "silencht", email = "silencht@qq.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "logging_mp",
    "opencv-python",
    "numpy>=1.21,<2",
    "pyyaml",
    "pyzmq",
]
[project.optional-dependencies]
# execute pip install -e ".[client]" to install client-only dependencies
client = []
# execute pip install -e ".[server]" to install server dependencies
server = [
    "aiohttp",
    "aiortc",
    "pupil-labs-uvc",
]
# execute pip install -e ".[raspi]" to install Raspberry Pi 5 dependencies
# NOTE: picamera2 is intentionally omitted here – it must be installed at the
# system level via: sudo apt install python3-picamera2 python3-libcamera
# The .venv is created with --system-site-packages so it is visible there.
# Installing picamera2 via pip overrides the apt version and breaks the
# libcamera native bindings, causing ImportError at runtime.
raspi = [
    "aiohttp",
    "aiortc",
    "pupil-labs-uvc",
]

[project.urls]
Homepage = "https://github.com/unitreerobotics/teleimager"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
teleimager-server = "teleimager.image_server:main"
teleimager-client = "teleimager.image_client:main"
